fix broken styles in paper show page

--- a/app/components/relatedPapers/relatedPapers.scss
+++ b/app/components/relatedPapers/relatedPapers.scss
@@ -108,6 +108,10 @@
 }
 
 @media (max-width: $mobile_width) {
+  .contentBlockedContainer {
+    width: 100%;
+  }
+
   .paperItemWrapper {
     width: 100%;
     padding: 12px;
